--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,8 +28,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install uv
-        uv pip install .
-        uv pip install rdkit flake8 pytest mapchiral polars networkx autopeptideml
+        uv pip install . --system
+        uv pip install rdkit flake8 pytest mapchiral polars networkx autopeptideml --system
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
