--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install .
-        pip install rdkit flake8 pytest mapchiral polars networkx
+        pip install rdkit flake8 pytest mapchiral polars networkx transformers<5
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
