Refactor pip install commands in workflow
Removed transformers installation from the combined pip install command and added a separate command to upgrade transformers.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install uv
         uv pip install . --system
-        uv pip install rdkit flake8 pytest mapchiral polars networkx autopeptideml transformers<5 --system
+        uv pip install rdkit flake8 pytest mapchiral polars networkx autopeptideml --system
+        uv pip install transformers -U
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
