Add --system flag to transformers installation

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,7 +30,7 @@ jobs:
         pip install uv
         uv pip install . --system
         uv pip install rdkit flake8 pytest mapchiral polars networkx autopeptideml --system
-        uv pip install transformers -U
+        uv pip install transformers -U --system
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
