--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install uv
         uv pip install . --system
-        uv pip install rdkit flake8 pytest mapchiral polars networkx autopeptideml "transformers<5.0.0" --system
+        uv pip install rdkit flake8 pytest mapchiral polars networkx autopeptideml umap-learn "transformers<5.0.0" --system
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
